improve recreate firewall rules